# cairo-streams

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  protostar.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: formatting.yml  tests.yml
src/: filter.cairo  foreach.cairo  reduce.cairo  stream.cairo
src/onlydust/stream/: common_implicits.cairo  custom_implicits.cairo  default_implementation.cairo  foreach.cairo  full_implicits.cairo  generic.cairo  lib.cairo  library.cairo  no_implicits.cairo  reduce.cairo
src/onlydust/stream/internal/: common.cairo  filter.cairo  foreach.cairo  map.cairo  reduce.cairo  some.cairo
src/onlydust/stream/tests/: test_common_internal.cairo  test_filter.cairo  test_foreach.cairo  test_helper.cairo  test_map.cairo  test_reduce.cairo  test_some.cairo
tests/: test_filter.cairo  test_foreach.cairo  test_helper.cairo  test_reduce.cairo
