[metadata]
name = onlydust-cairo-streams
version = 0.0.1
description = Array stream library written in pure Cairo
author = OnlyDust
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/onlydustxyz/cairo-streams
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
python_requires = >=3.7
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
onlydust = "*.cairo"
